crates/pg_syntax/tests/snapshots/postgres_regress/delete@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT id, a, char_length(b) FROM delete_test;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "id"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..12
    ColumnRef@11..12
      Ident@11..12 "a"
  Ascii44@12..13 ","
  Whitespace@13..14 " "
  ResTarget@14..27
    FuncCall@14..27
      Ident@14..25 "char_length"
      Ascii40@25..26 "("
      ColumnRef@26..27
        Ident@26..27 "b"
  Ascii41@27..28 ")"
  Whitespace@28..29 " "
  From@29..33 "FROM"
  Whitespace@33..34 " "
  RangeVar@34..45
    Ident@34..45 "delete_test"
  Ascii59@45..46 ";"

