crates/pg_syntax/tests/snapshots/postgres_regress/drop_if_exists@146.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE FUNCTION test_ambiguous_funcname(text) returns text as $$ select $1; $$ language sql;
---
CreateFunctionStmt@0..92
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..39 "test_ambiguous_funcname"
  Ascii40@39..40 "("
  FunctionParameter@40..44
    TypeName@40..44
      TextP@40..44 "text"
  Ascii41@44..45 ")"
  Whitespace@45..46 " "
  Returns@46..53 "returns"
  Whitespace@53..54 " "
  TypeName@54..58
    TextP@54..58 "text"
  Whitespace@58..59 " "
  DefElem@59..78
    As@59..61 "as"
    Whitespace@61..62 " "
    List@62..78
      Sconst@62..78 "$$ select $1; $$"
  Whitespace@78..79 " "
  DefElem@79..91
    Language@79..87 "language"
    Whitespace@87..88 " "
    SqlP@88..91 "sql"
  Ascii59@91..92 ";"

