crates/pg_syntax/tests/snapshots/postgres_regress/drop_if_exists@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE domain test_domain_exists as int not null check (value > 0);
---
CreateDomainStmt@0..67
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  DomainP@7..13 "domain"
  Whitespace@13..14 " "
  Ident@14..32 "test_domain_exists"
  Whitespace@32..33 " "
  As@33..35 "as"
  Whitespace@35..36 " "
  TypeName@36..39
    IntP@36..39 "int"
  Whitespace@39..40 " "
  Constraint@40..48
    Not@40..43 "not"
    Whitespace@43..44 " "
    NullP@44..48 "null"
  Whitespace@48..49 " "
  Constraint@49..65
    Check@49..54 "check"
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    AExpr@56..65
      ColumnRef@56..61
        ValueP@56..61 "value"
      Whitespace@61..62 " "
      Ascii62@62..63 ">"
      Whitespace@63..64 " "
      AConst@64..65
        Iconst@64..65 "0"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

