crates/pg_syntax/tests/snapshots/postgres_regress/drop_if_exists@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE CONVERSION test_conversion_exists\n    FOR 'LATIN1' TO 'UTF8' FROM iso8859_1_to_utf8;"
---
CreateConversionStmt@0..91
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  ConversionP@7..17 "CONVERSION"
  Whitespace@17..18 " "
  Ident@18..40 "test_conversion_exists"
  Newline@40..41 "\n"
  Whitespace@41..45 "    "
  For@45..48 "FOR"
  Whitespace@48..49 " "
  Sconst@49..57 "'LATIN1'"
  Whitespace@57..58 " "
  To@58..60 "TO"
  Whitespace@60..61 " "
  Sconst@61..67 "'UTF8'"
  Whitespace@67..68 " "
  From@68..72 "FROM"
  Whitespace@72..73 " "
  Ident@73..90 "iso8859_1_to_utf8"
  Ascii59@90..91 ";"

